Implemented Export overview

--- a/resources/css/humhub.external_calendar.css
+++ b/resources/css/humhub.external_calendar.css
@@ -28,3 +28,8 @@
 #calendar-entry-form .tab-menu {
     margin-bottom:0px;
 }
+
+.external-calendar-overview textarea {
+    background-color:white !important;
+    cursor: default !important;
+}
